# jewzaam-reviews

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: version-check.yml
resources/: handoff-contract.md
schemas/: findings.schema.json
schemas/examples/: apply-review.invalid-findings-nonempty.json  apply-review.valid.json  c4-reverse-engineer.invalid-missing-verdict.json  c4-reverse-engineer.valid.json  c4-validation.invalid-missing-verdict.json  c4-validation.valid.json  review.invalid-missing-concern.json  review.valid.json  standards.invalid-bad-severity.json  standards.valid.json
scripts/: bootstrap-tmp.sh  envelope.py  print-handoff-contract.sh  print-plugin-home.sh  version-bump.py  version-check.py
skills/apply-review/: README.md  SKILL.md
skills/apply-review/scripts/: render-apply-report.py
skills/apply-review/tests/: test_render_apply_report.py
skills/c4-reverse-engineer/: CLAUDE.md  README.md  SKILL.md
skills/c4-reverse-engineer/references/: example-output.md  failure-modes.md  review-format.md  subagent-prompts.md  verification-templates.md
skills/c4-reverse-engineer/scripts/: count_source_lines.py  find_external_calls.py  find_platform_conditionals.py  (+2 more)
skills/review/: CLAUDE.md  README.md  SKILL.md
skills/standards/: README.md  SKILL.md
skills/test/: SKILL.md
skills/update-pr/: CLAUDE.md  README.md  SKILL.md
tests/: conftest.py  test_bootstrap_tmp.py  test_envelope.py  test_findings_schema.py  test_version_check.py
(+51 files in other folders)
